# lambda_calc

./: .gitignore  CMakeLists.txt  README.md  environment.h  evaluator.cpp  evaluator.h  expression.cpp  expression.h  main.cpp  parser.cpp  parser.h  visitor.h
